--- a/views/usercenter.ejs
+++ b/views/usercenter.ejs
@@ -186,8 +186,14 @@
                             </div>
                         </div>
                         <div class="layui-form-item">
+                            <label class="layui-form-label">原文链接</label>
+                            <div class="layui-input-inline">
+                                <input type="text" name="arturl" lay-verify="url" required placeholder="请输入原文url" autocomplete="off" class="layui-input">
+                            </div>
+                        </div>
+                        <div class="layui-form-item">
                             <label class="layui-form-label">分类</label>
-                            <div class="tags" id="tags" style="margin:40px 111px;">
+                            <div class="tags" id="tags" style="margin:30px 111px;">
                                 <input type="text" name="" id="inputTags" placeholder="回车生成标签" autocomplete="off">
                             </div>
                         </div>
@@ -248,6 +254,7 @@
 
                 //标签
                 var inputTags = layui.inputTags;
+                console.log(inputTags)
                 inputTags.render({
                     elem:'#inputTags',
                     content: [],
@@ -378,6 +385,7 @@
 
                     var postData = {
                         title : data.field.title
+                        ,articleurl:data.field.arturl
                         ,tags : []
                         ,content : layedit.getContent(index)
                     };
