--- a/public/css/articledetail.less
+++ b/public/css/articledetail.less
@@ -35,11 +35,14 @@
             font-weight: normal;
         }
         .article-url{
-            color: #29a79b;
+            color: #01AAED;
         }
     }
     .article-other-art{
         margin-top: 30px;
+        .page-link{
+            color: #01AAED;
+        }
         .article-after-art{
             text-align: end;
         }
