--- a/views/articleDetail.ejs
+++ b/views/articleDetail.ejs
@@ -12,7 +12,7 @@
             <span class="article-node-one">
                 <i class="layui-icon layui-icon-note" style="font-size: 12px; color: #1E9FFF;"></i>
                 <% data.tags&&data.tags.split(',').forEach(function(item){%>
-                    <a href="" style="color:#009688"><%=item %></a>
+                    <a href="/tags/<%=item%>" style="color:#009688"><%=item %></a>
                 <% }) %>
             </span><span class="article-node-one">
                 <i class="layui-icon layui-icon-fire" style="font-size: 12px; color: #1E9FFF;"></i>
@@ -43,10 +43,18 @@
         <div class="article-other-art layui-row">
             <div class="article-before-art layui-col-md6">
                 <i class="layui-icon layui-icon-left" style="font-size: 15px; "></i>
-                <span class="">前一篇</span>
+                <%if(beforeArticle[0]&&beforeArticle[0].title){%>
+                <a href="/article/<%=beforeArticle[0]&&beforeArticle[0]._id%>">
+                    前一篇 <span  class="page-link"><%=beforeArticle[0].title%> </span>
+                </a>
+                <%}%>
             </div>
             <div class="article-after-art layui-col-md6">
-                <span class="">后一篇</span>
+                <%if(nextArticle[0]&&nextArticle[0].title){%>
+                <a href="/article/<%=nextArticle[0]&&nextArticle[0]._id%>">
+                    后一篇 <span  class="page-link"><%=nextArticle[0].title%></span>
+                </a>
+                <%}%>
                 <i class="layui-icon layui-icon-right" style="font-size: 15px; ;"></i>
             </div>
         </div>
@@ -54,12 +62,7 @@
 
     <!-- 已经存在的评论 -->
     <div class="comments">
-        <h3 class="comments-title">
-            <%if(commentData.length){%>
-            <span class=""> <%commentData.length%></span>
-            <%}%>
-            评论
-        </h3>
+        <h3 class="comments-title">评论</h3>
         <ul class="comments-list">
             <%commentData.forEach(v=>{%>
             <li class="comments-item layui-row layui-col-space10">
@@ -99,22 +102,6 @@
     </div>
 
     <div class="article-comment">
-        <div class="layui-form-item layui-row">
-            <div class="layui-col-md6">
-                <label class="layui-form-label">昵称</label>
-                <div class="layui-input-inline">
-                    <input name="password" autocomplete="off" class="layui-input">
-                </div>
-                <!-- <div class="layui-form-mid layui-word-aux">辅助文字</div> -->
-            </div>
-            <div class="layui-col-md6">
-                <label class="layui-form-label">邮箱</label>
-                <div class="layui-input-inline">
-                    <input type="email" name="password" autocomplete="off" class="layui-input">
-                </div>
-            </div>
-        </div>
-
         <form class="layui-form" action="">
             <div class="layui-form-item layui-form-text">
                 <div class="layui-input-block" style="margin-left: 0">
@@ -130,7 +117,8 @@
     </div>
 
 
-</div> <!--引入layui的模块代码-->
+</div> 
+<!--引入layui的模块代码-->
 <script src="/js/index-layui.js"></script>
 <!--当前页面的模块代码-->
 <script>
@@ -172,6 +160,7 @@
     (function(){
         var $articleurl = $(".article-url")
         var $articleurlLen = $(".article-url").text()
+            //console.log($articleurlLen)
         if(!$articleurlLen.length){
             $articleurl.text(location.href)
         }
